--- a/app/src/main/res/layout/fragment_communication_request.xml
+++ b/app/src/main/res/layout/fragment_communication_request.xml
@@ -404,6 +404,7 @@
                     </android.support.v7.widget.CardView>
 
                     <TextView
+                        android:id="@+id/communication_tag_textview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/medium_margin"
@@ -414,6 +415,7 @@
                         android:textStyle="bold" />
 
                     <android.support.v7.widget.CardView
+                        android:id="@+id/communication_card_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#FFFFFF">
@@ -591,8 +593,8 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:padding="@dimen/small_padding"
-            android:visibility="visible"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/wait_textview"
@@ -601,8 +603,8 @@
             android:layout_below="@+id/wait_imageview"
             android:layout_centerHorizontal="true"
             android:text="অপেক্ষমাণ রাখুন"
-            android:visibility="visible"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:visibility="visible" />
 
         <ImageView
             android:id="@+id/accept_imageview"
