--- a/app/src/main/res/layout/inbox.xml
+++ b/app/src/main/res/layout/inbox.xml
@@ -24,7 +24,7 @@
     </android.support.v7.widget.CardView>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="#fff"></TextView>
 
     <android.support.v7.widget.CardView
@@ -45,7 +45,7 @@
     </android.support.v7.widget.CardView>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="#fff"></TextView>
 
     <android.support.v7.widget.CardView
@@ -66,7 +66,7 @@
     </android.support.v7.widget.CardView>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="#fff"></TextView>
 
 
@@ -88,7 +88,7 @@
     </android.support.v7.widget.CardView>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="#fff"></TextView>
 
 
@@ -110,27 +110,22 @@
     </android.support.v7.widget.CardView>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="#fff"></TextView>
 
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_height="wrap_content">
+
 
         <TextView
             android:id="@+id/tv_trash"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:gravity="center"
             android:textColor="#ffffff"
-            android:background="#2E3F51"
-            android:text="@string/trash"/>
-    </android.support.v7.widget.CardView>
 
+            android:text="@string/trash"/>
 
 
 
