--- a/app/src/main/res/layout/inbox_item.xml
+++ b/app/src/main/res/layout/inbox_item.xml
@@ -66,11 +66,12 @@
 
 
                 <TextView
-                    android:layout_marginTop="15dp"
+
                     android:id="@+id/message"
                     android:textColor="#8b8181"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:lines="3"
 
                     android:text="XXXXXXXXXXXXXXX" />
 
