--- a/app/src/main/res/layout/common_user_profile_item.xml
+++ b/app/src/main/res/layout/common_user_profile_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="130dp"
     android:orientation="vertical"
     android:padding="@dimen/most_small_padding">
 
@@ -12,12 +12,12 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/profile_item_cardview_height"
+        android:layout_height="130dp"
        >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/profile_item_cardview_height"
+            android:layout_height="130dp"
 
             android:orientation="horizontal"
             android:weightSum="5">
@@ -26,8 +26,8 @@
                 android:id="@+id/profile_image"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.3"
-                android:padding="@dimen/medium_padding"
+                android:layout_weight="1.5"
+                android:padding="@dimen/small_padding"
                 android:scaleType="fitXY"
                 android:src="@drawable/fake_image"
                   />
@@ -38,7 +38,7 @@
                 android:layout_weight="3.5"
                 android:padding="3dp"
 
-                android:weightSum="5.5"
+                android:weightSum="5.8"
                 android:orientation="vertical"
                 android:paddingLeft="@dimen/small_padding"
                 android:paddingRight="@dimen/most_small_padding">
@@ -54,12 +54,13 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:layout_weight="2"
+                    android:layout_weight="1.98"
 
                     android:text="User Name"
                     android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/medium_textsize" />
                     <ImageView
+                        android:visibility="invisible"
                         android:layout_width="0dp"
                         android:layout_weight="1"
 
@@ -71,6 +72,7 @@
 
                         android:layout_toRightOf="@+id/user_name"/>
                     <TextView
+                        android:id="@+id/date_time"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:paddingTop="@dimen/medium_padding"
@@ -98,15 +100,17 @@
                     android:orientation="horizontal"
                     android:weightSum="2">
                     <Button
+                        android:id="@+id/phone"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:text="Phone"/>
+                        android:text="@string/make_call"/>
                     <Button
+                        android:id="@+id/message"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:text="Message"/>
+                        android:text="@string/make_message"/>
 
                 </LinearLayout>
 
