--- a/app/src/main/res/layout/match.xml
+++ b/app/src/main/res/layout/match.xml
@@ -3,17 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:id="@+id/linearlayout"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+
         <LinearLayout
+            android:id="@+id/linearlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="2">
             <TextView
+                android:id="@+id/biodata"
                 android:layout_width="0dp"
                 android:text="@string/biodata"
                 android:textColor="#ffffff"
@@ -24,9 +21,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"/>
             <TextView
+                android:id="@+id/connection"
                 android:layout_width="0dp"
                 android:text="@string/connection"
-                android:background="#eeeeee"
+                android:background="@android:color/darker_gray"
+                android:textColor="@android:color/black"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:gravity="center"
@@ -34,50 +33,12 @@
                 android:layout_weight="1"/>
         </LinearLayout>
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/communication_profile_list"
+            android:layout_below="@+id/linearlayout"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             ></android.support.v7.widget.RecyclerView>
-
-
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        android:layout_above="@+id/r1">
-
-
-
-
-        <RelativeLayout
-            android:id="@+id/RelativeLayoutLeftButton"
-            android:layout_width="match_parent"
-            android:visibility="gone"
-            android:layout_height="match_parent">
-
-            <ProgressBar
-                android:id="@+id/progressBar1"
-                style="?android:attr/progressBarStyleSmall"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_centerInParent="true" />
-
-            <ImageButton
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_centerInParent="true"
-                android:background="@android:color/transparent"
-                android:scaleType="fitXY"
-                android:src="@drawable/b"
-                android:tint="@color/cardview_dark_background" />
-
-
-        </RelativeLayout>
-
-    </RelativeLayout>
-
 
 
 </RelativeLayout>
