--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#730709</color>
     <color name="colorPrimaryDark">#4b0304</color>
-    <color name="colorAccent">#f9a3526d</color>
+    <color name="colorAccent">#b11113</color>
     <color name="tab_text_color">#ffffff</color>
 
 
