--- a/app/src/main/res/layout/match_user_choice_recyclerview_item.xml
+++ b/app/src/main/res/layout/match_user_choice_recyclerview_item.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
     android:layout_marginTop="@dimen/medium_margin"
+    android:gravity="center"
     android:orientation="vertical">
 
 
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:text="title textview :"
+            android:textColor="#00011F"
             android:textSize="@dimen/medium_textsize" />
 
         <TextView
@@ -27,6 +28,7 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/title_textview"
             android:text="title textview vlaue :"
+            android:textColor="#00011F"
             android:textSize="@dimen/medium_textsize" />
 
 
