--- a/app/src/main/res/layout/list_profile_details_parent_item.xml
+++ b/app/src/main/res/layout/list_profile_details_parent_item.xml
@@ -1,10 +1,9 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:layout_marginTop="0.5dp"
-
-
-    >
+    app:cardBackgroundColor="#FFFFFF">
 
     <RelativeLayout
         android:id="@+id/card_view"
