--- a/app/src/main/res/layout/other_info_child_item.xml
+++ b/app/src/main/res/layout/other_info_child_item.xml
@@ -34,7 +34,7 @@
             android:textSize="@dimen/item_textsize"
             android:textStyle="normal" />
 
-        <EditText
+        <TextView
             android:id="@+id/titleResultTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
