--- a/app/src/main/res/layout/fragment_communication_request.xml
+++ b/app/src/main/res/layout/fragment_communication_request.xml
@@ -34,7 +34,7 @@
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:layout_height="wrap_content"
                     app:layout_collapseMode="parallax">
 
                     <android.support.v4.view.ViewPager
@@ -49,7 +49,7 @@
                         android:id="@+id/user_profile_image"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
                     <RelativeLayout
@@ -91,11 +91,12 @@
 
 
                     <TextView
+                        android:id="@+id/user_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_marginLeft="@dimen/medium_margin"
-                        android:text="hellow world"
+                        android:text=""
                         android:textColor="#FFFFFF"
                         android:textSize="@dimen/medium_textsize"
                         android:textStyle="bold" />
@@ -505,7 +506,8 @@
                                     android:layout_alignParentLeft="true"
                                     android:layout_below="@+id/viewer_image"
                                     android:gravity="center"
-                                    android:text="তার বৈশিষ্ট্য" />
+                                    android:text="তার বৈশিষ্ট্য"
+                                    android:textColor="#000000" />
 
 
                                 <Button
@@ -521,8 +523,7 @@
                                     android:layout_width="@dimen/viewer_image_size"
                                     android:layout_height="@dimen/viewer_image_size"
                                     android:layout_alignParentRight="true"
-                                    android:layout_marginRight="@dimen/small_margin"
-                                    android:src="@mipmap/ic_launcher" />
+                                    android:layout_marginRight="@dimen/small_margin" />
 
                                 <TextView
                                     android:layout_width="@dimen/match_text_size"
@@ -533,6 +534,7 @@
                                     android:gravity="right"
                                     android:lines="1"
                                     android:text="আপনার পছন্দের মিল"
+                                    android:textColor="#000000"
                                     android:textSize="@dimen/small_textsize" />
 
                             </RelativeLayout>
