--- a/app/src/main/res/layout/match_user_choice_recyclerview_item.xml
+++ b/app/src/main/res/layout/match_user_choice_recyclerview_item.xml
@@ -40,7 +40,7 @@
             android:layout_marginRight="@dimen/medium_margin"
             android:padding="@dimen/medium_padding"
             android:src="@drawable/match_icon"
-            android:tint="@color/colorPrimaryDark" />
+            android:tint="#D50000" />
 
 
     </RelativeLayout>
