--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -528,8 +528,7 @@
                                     android:layout_width="100dp"
                                     android:layout_height="100dp"
                                     android:layout_alignParentLeft="true"
-                                    android:scaleType="fitXY"
-                                    android:src="@mipmap/ic_launcher" />
+                                    android:scaleType="fitXY" />
 
 
                                 <TextView
@@ -554,8 +553,7 @@
                                     android:layout_width="100dp"
                                     android:layout_height="100dp"
                                     android:layout_alignParentRight="true"
-                                    android:layout_marginRight="@dimen/small_margin"
-                                    android:src="@mipmap/ic_launcher" />
+                                    android:layout_marginRight="@dimen/small_margin" />
 
                                 <TextView
                                     android:layout_width="150dp"
