--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -632,54 +632,73 @@
         android:layout_alignParentBottom="true"
         android:visibility="invisible">
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/request_send_buttons_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#BDBDBD"
-            android:visibility="gone">
-
-            <ImageView
-                android:id="@+id/cancel_imageview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="45dp"
-                android:padding="@dimen/small_padding"
-                android:src="@drawable/cancel_icon" />
-
-            <TextView
-                android:id="@+id/cancel_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/cancel_imageview"
-                android:layout_marginLeft="45dp"
-                android:text="প্রত্যাখ্যান করুন"
-                android:textColor="#000000" />
+            android:orientation="horizontal"
+            android:visibility="gone"
+            android:weightSum="2">
 
 
-            <ImageView
-                android:id="@+id/accept_imageview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginRight="65dp"
-                android:padding="@dimen/small_padding"
-                android:src="@drawable/accept_icon" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/accept_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/accept_imageview"
-                android:layout_marginRight="65dp"
-                android:text="গ্রহণ করুন"
-                android:textColor="#000000" />
+                <ImageView
+                    android:id="@+id/cancel_imageview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerInParent="true"
+                    android:layout_toLeftOf="@+id/accept_imageview"
+                    android:padding="@dimen/small_padding"
+                    android:src="@drawable/cancel_icon" />
+
+                <TextView
+                    android:id="@+id/cancel_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/cancel_imageview"
+                    android:text="@string/cancel_btn_Text"
+                    android:textColor="#000000" />
+
+            </LinearLayout>
 
 
-        </RelativeLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+
+                <ImageView
+                    android:id="@+id/accept_imageview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerInParent="true"
+                    android:padding="@dimen/small_padding"
+                    android:src="@drawable/accept_icon" />
+
+                <TextView
+                    android:id="@+id/accept_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@+id/accept_imageview"
+                    android:text="@string/accept_btn_text"
+                    android:textColor="#000000" />
+            </LinearLayout>
+
+
+        </LinearLayout>
 
 
         <Button
