--- a/app/src/main/res/layout/inbox.xml
+++ b/app/src/main/res/layout/inbox.xml
@@ -14,25 +14,26 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp">
 
         <TextView
 
             android:id="@+id/tv_sent_request"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
             android:gravity="center"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
             android:text="@string/sent_request"
-            android:textSize="@dimen/item_textsize"
-            android:textColor="#000000"/>
+            android:textColor="#000000"
+            android:textSize="@dimen/item_textsize" />
     </android.support.v7.widget.CardView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#fff" />
+        android:background="#C0C0C0" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -56,7 +57,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#fff" />
+        android:background="#C0C0C0" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -80,7 +81,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#fff" />
+        android:background="#C0C0C0" />
 
 
     <android.support.v7.widget.CardView
@@ -103,7 +104,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#fff" />
+        android:background="#C0C0C0" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -126,7 +127,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#fff" />
+        android:background="#C0C0C0" />
 
 
 
