--- a/app/src/main/res/layout/brother.xml
+++ b/app/src/main/res/layout/brother.xml
@@ -202,5 +202,155 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/spouse"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/tab_text_color"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:orientation="horizontal"
+            android:gravity="right"
+            android:id="@+id/reject_spouse"
+            android:layout_marginRight="10dp"
+            >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/remove"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="বাদ দিন"
+                android:layout_gravity="right"
+                android:layout_marginTop="10dp"
+                />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/name_brother_spouse"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="  ভাইয়ের স্ত্রীর নাম*"
+            android:textColor="@color/com_facebook_button_background_color_focused_disabled"
+            android:padding="10dp"
+            android:layout_marginLeft="15dp"
+            android:background="@color/white"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:singleLine="true"/>
+
+
+
+        <LinearLayout
+            android:id="@+id/professonal_status_brother_spouse"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/white"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/profession_text_view_brother_spouse"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:text="পেশা*"
+                android:textSize="18dp" />
+
+            <ImageView
+                android:id="@+id/down_arrow_profession_brother_spouse"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/down_arrow"
+                />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/professonal_group_status_brother_spouse"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/white"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/profession_group_text_view_brother_spouse"
+                android:gravity="left"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="প্রফেশনাল গ্রুপ (ঐচ্ছিক)"
+                android:textSize="18dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="15dp"/>
+            <ImageView
+                android:id="@+id/down_arrow_profession_group_brother_spouse"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/down_arrow"
+                />
+
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/designation_brother_spouse"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="পদবী"
+            android:textColor="@color/com_facebook_button_background_color_focused_disabled"
+            android:padding="10dp"
+            android:layout_marginLeft="15dp"
+            android:background="@color/white"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:singleLine="true"/>
+        <EditText
+            android:id="@+id/institution_brother_spouse"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="প্রতিষ্ঠান"
+            android:textColor="@color/com_facebook_button_background_color_focused_disabled"
+            android:padding="10dp"
+            android:layout_marginLeft="15dp"
+            android:background="@color/white"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:singleLine="true"/>
+
+    </LinearLayout>
+
+
+
+
 
 </LinearLayout>
